# pose_detection

./: README.md  pyproject.toml
src/pose_detection/: media_pipe.py
